cmake_minimum_required(VERSION 3.5)
project(SSL_DEMO)
if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
message("Windows")
add_compile_definitions(WINDOWS_OS)
else()
add_compile_definitions(LINUX_OS)
message("Other")
endif()
message(${CMAKE_SYSTEM_NAME})
include_directories(./inc/)
link_directories(./libs/)
add_executable(SslServer ./SSL_Server.c)
add_executable(sslClient ./SSL_Client.c)
if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
target_link_libraries(SslServer libssl-1_1-x64.lib)
target_link_libraries(SslServer libcrypto-1_1-x64.lib)
target_link_libraries(SslServer ws2_32.lib)
else()
target_link_libraries(SslServer libssl.a)
target_link_libraries(SslServer libcrypto.a)
endif()

if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
target_link_libraries(sslClient libssl-1_1-x64.lib)
target_link_libraries(sslClient libcrypto-1_1-x64.lib)
target_link_libraries(sslClient ws2_32.lib)
else()
target_link_libraries(sslClient libssl.a)
target_link_libraries(sslClient libcrypto.a)
endif()